# LBFGSpp

./: .gitignore  BUILD.bazel  CHANGELOG.md  CMakeLists.txt  CNAME  LICENSE.md  MODULE.bazel  README.md  _config.yml  example-rosenbrock-box.cpp  example-rosenbrock-comparison.cpp  example-rosenbrock.cpp  index.html  index.md  main.cpp  params.json  test-rosenbrock.cpp
.bcr/: metadata.template.json  presubmit.yml
_layouts/: default.html
benchmark/: index.html
css/: highlight.css  stylesheet.css
doc/: BFGSMat_8h_source.html  BKLDLT_8h_source.html  Cauchy_8h_source.html  LBFGSB_8h_source.html  LBFGS_8h_source.html  LineSearchBacktracking_8h_source.html  LineSearchBracketing_8h_source.html  LineSearchMoreThuente_8h_source.html  LineSearchMoreThuente__1_8h_source.html  LineSearchMoreThuente__2_8h_source.html  LineSearchNocedalWright_8h_source.html  LineSearch_8h_source.html  Param_8h_source.html  README_8md_source.html  SubspaceMin_8h_source.html  annotated.html  annotated_dup.js  classLBFGSpp_1_1LBFGSBParam-members.html  classLBFGSpp_1_1LBFGSBParam.html  classLBFGSpp_1_1LBFGSBParam.js  classLBFGSpp_1_1LBFGSBSolver-members.html  classLBFGSpp_1_1LBFGSBSolver.html  classLBFGSpp_1_1LBFGSBSolver.js  classLBFGSpp_1_1LBFGSParam-members.html  classLBFGSpp_1_1LBFGSParam.html  classLBFGSpp_1_1LBFGSParam.js  classLBFGSpp_1_1LBFGSSolver-members.html  classLBFGSpp_1_1LBFGSSolver.html  classLBFGSpp_1_1LBFGSSolver.js  classes.html  (+32 more)
examples/: BUILD.bazel  CMakeLists.txt  MODULE.bazel  example-rosenbrock-bracketing.cpp  example-rosenbrock-comparison.cpp  example-rosenbrock.cpp
(+57 files in other folders)
